--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "engineStrict": true,
   "private": true,
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-async-errors": "^3.1.1",
